finish all fundrasing user page but payment page

--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ h6,
 }
 
 .appointment-form {
-    background: rgba(6, 163, 218, .7);
+    /* background: rgba(6, 163, 218, .7); */
 }
 
 .service-item img,
